# py-rust-glm

./: .gitignore  Cargo.toml  dev.ipynb  pyproject.toml
py_rust_glm/: __init__.py  glm.py
src/: lib.rs
